# cmake-embedded-examples

./: .gitmodules  LICENSE  README.md
avr-gcc/: CMakeLists.txt  blink.c
